# duckdb-behavioral

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPU_OPTIMIZATION_ANALYSIS.md  Cargo.toml  GPU_INTEGRATION_ANALYSIS.md  LESSONS.md  Makefile  PERF.md  README.md  SECURITY.md  WEB_ANALYTICS_PLAN.md  deny.toml  description.yml  rust-toolchain.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  codeql.yml  community-submission.yml  e2e.yml  pages.yml  release.yml
benches/: retention_bench.rs  sequence_bench.rs  sequence_match_events_bench.rs  sequence_next_node_bench.rs  sessionize_bench.rs  sort_bench.rs  window_funnel_bench.rs
demo/: index.html
docs/: book.toml
docs/src/: SUMMARY.md  contributing.md  cookbook.md  custom.css  engineering.md  faq.md  getting-started.md  index.md  quick-reference.md  theme-toggle.js  use-cases.md
docs/src/functions/: retention.md  sequence-count.md  sequence-match-events.md  sequence-match.md  sequence-next-node.md  sessionize.md  window-funnel.md
docs/src/internals/: architecture.md  clickhouse-compatibility.md  performance.md
docs/src/operations/: benchmarking.md  ci-cd.md  security.md
examples/: 01_sessions.sql  02_funnel.sql  03_retention.sql  04_pattern_matching.sql  05_user_flow.sql  06_combined_analysis.sql  README.md
scripts/: add-spdx-headers.sh  check.sh  run-benchmarks.sh  run_all_benchmarks.sh  setup.sh
src/: lib.rs  retention.rs  sequence.rs  sequence_next_node.rs  sessionize.rs  window_funnel.rs
src/common/: event.rs  mod.rs  timestamp.rs
src/ffi/: mod.rs  retention.rs  sequence.rs  sequence_match_events.rs  sequence_next_node.rs  sessionize.rs  window_funnel.rs
src/pattern/: executor.rs  mod.rs  parser.rs
test/sql/: git_mining.test  retention.test  sequence_match.test  sequence_match_events.test  sequence_next_node.test  sessionize.test  window_funnel.test
